fix clipping

--- a/style.scss
+++ b/style.scss
@@ -85,7 +85,7 @@ body {
 }
 
 #mouse {
-  margin-top: 6rem;
+  margin-top: 12rem;
   animation: float 4s ease-in-out infinite;
 }
 
@@ -246,6 +246,7 @@ body {
   height: 26%;
   width: 100%;
   background: linear-gradient(180deg, #71a7f4 5.55%, #5981ff 87.36%);
+  margin-left: -1px;
 }
 
 .text {
@@ -351,6 +352,7 @@ body {
 .shore {
   position: relative;
   width: 400%;
+  margin-left: -1px;
   .ground {
     height: 13%;
     width: auto;
@@ -484,6 +486,7 @@ body {
 .shore_2 {
   position: relative;
   width: 200%;
+  margin-left: -1px;
   background: linear-gradient(
     0deg,
     #9ff1e4 0%,
@@ -536,11 +539,11 @@ body {
     top: 15%;
   }
 
-  .sky {
+  .sky_2 {
     position: absolute;
     width: 100%;
-    height: 200%;
-    bottom: 100%;
+    height: calc(200% + 1px);
+    bottom: calc(100% - 1px);
     left: 0;
     .start {
       width: 100%;
@@ -558,6 +561,7 @@ body {
     .end {
       width: 100%;
       height: 50%;
+      margin-bottom: -1px;
       background: linear-gradient(
         0deg,
         #00548c 0%,
